fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/MANTA_Case_Data__c.object-meta.xml
<CustomObject>
    <label>MANTA Case Data</label>
    <nameField>
        <displayFormat>MCD-{00000}</displayFormat>
        <label>MANTA Case Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MANTA Case Datas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>