fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/ACT_Prior_to_MANTA_Closure__c.field-meta.xml
<CustomField>
    <fullName>ACT_Prior_to_MANTA_Closure__c</fullName>
    <label>ACT Prior to MANTA Closure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>