fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Additional_Access_Notes__c.field-meta.xml
<CustomField>
    <fullName>Additional_Access_Notes__c</fullName>
    <label>Additional Access Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>