fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Amt_of_Protamine_Given__c.field-meta.xml
<CustomField>
    <fullName>Amt_of_Protamine_Given__c</fullName>
    <label>Amt. of Protamine Given</label>
    <length>255</length>
    <type>Text</type>
</CustomField>