fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Blood_Pressure_Prior_to_MANTA_Closure__c.field-meta.xml
<CustomField>
    <fullName>Blood_Pressure_Prior_to_MANTA_Closure__c</fullName>
    <label>Blood Pressure Prior to MANTA Closure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>