fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Calcification__c.field-meta.xml
<CustomField>
    <fullName>Calcification__c</fullName>
    <label>Calcification</label>
    <length>15</length>
    <type>Text</type>
</CustomField>