fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Calcification_Location__c.field-meta.xml
<CustomField>
    <fullName>Calcification_Location__c</fullName>
    <label>Calcification Location</label>
    <length>15</length>
    <type>Text</type>
</CustomField>