fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Case_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Date__c</fullName>
    <label>Case Date</label>
    <type>Date</type>
</CustomField>