fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Case_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Start_Time__c</fullName>
    <label>Case Start Time</label>
    <type>Time</type>
</CustomField>