fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <length>55</length>
    <type>Text</type>
</CustomField>