fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Deploying_Physician__c.field-meta.xml
<CustomField>
    <fullName>Deploying_Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deploying Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MANTA Case Datas</relationshipLabel>
    <relationshipName>MANTA_Case_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>