fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Depth_1_Measurment__c.field-meta.xml
<CustomField>
    <fullName>Depth_1_Measurment__c</fullName>
    <label>Depth +1 Measurment</label>
    <length>15</length>
    <type>Text</type>
</CustomField>