fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Device__c.field-meta.xml
<CustomField>
    <fullName>Device__c</fullName>
    <label>Device</label>
    <length>55</length>
    <type>Text</type>
</CustomField>