fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Device_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Device_Manufacturer__c</fullName>
    <label>Device Manufacturer</label>
    <length>55</length>
    <type>Text</type>
</CustomField>