fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Device_Size__c.field-meta.xml
<CustomField>
    <fullName>Device_Size__c</fullName>
    <label>Device Size</label>
    <length>15</length>
    <type>Text</type>
</CustomField>