fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Heparin_Total_at_End_of_Case__c.field-meta.xml
<CustomField>
    <fullName>Heparin_Total_at_End_of_Case__c</fullName>
    <label>Heparin Total at End of Case</label>
    <length>255</length>
    <type>Text</type>
</CustomField>