fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MANTA Case Datas</relationshipLabel>
    <relationshipName>MANTA_Case_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>