fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Left_Femoral_Vessel_Size__c.field-meta.xml
<CustomField>
    <fullName>Left_Femoral_Vessel_Size__c</fullName>
    <label>Left Femoral Vessel Size</label>
    <length>15</length>
    <type>Text</type>
</CustomField>