fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/MANTA_Lot_Number__c.field-meta.xml
<CustomField>
    <fullName>MANTA_Lot_Number__c</fullName>
    <label>MANTA Lot Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>