fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/MANTA_Not_Used__c.field-meta.xml
<CustomField>
    <fullName>MANTA_Not_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MANTA Not Used</label>
    <type>Checkbox</type>
</CustomField>