fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/MANTA_Proctorship_Request__c.field-meta.xml
<CustomField>
    <fullName>MANTA_Proctorship_Request__c</fullName>
    <label>MANTA Proctorship Request</label>
    <referenceTo>MANTA_Proctorship_Request__c</referenceTo>
    <relationshipLabel>MANTA Case Records</relationshipLabel>
    <relationshipName>MANTA_Case_Datas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>