fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/MANTA_Trainer__c.field-meta.xml
<CustomField>
    <fullName>MANTA_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MANTA Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MANTA_Case_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>