fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Micropuncture_used_for_access__c.field-meta.xml
<CustomField>
    <fullName>Micropuncture_used_for_access__c</fullName>
    <label>Micropuncture used for access?</label>
    <length>15</length>
    <type>Text</type>
</CustomField>