fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Other_Wire_Used__c.field-meta.xml
<CustomField>
    <fullName>Other_Wire_Used__c</fullName>
    <label>Other Wire Used</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>