fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Post_Arteriogram_Taken__c.field-meta.xml
<CustomField>
    <fullName>Post_Arteriogram_Taken__c</fullName>
    <label>Post Arteriogram Taken</label>
    <length>15</length>
    <type>Text</type>
</CustomField>