fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Protamine_Given__c.field-meta.xml
<CustomField>
    <fullName>Protamine_Given__c</fullName>
    <label>Protamine Given</label>
    <length>15</length>
    <type>Text</type>
</CustomField>