fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Reason_MANTA_Not_Used__c.field-meta.xml
<CustomField>
    <fullName>Reason_MANTA_Not_Used__c</fullName>
    <label>Reason MANTA Not Used</label>
    <length>55</length>
    <type>Text</type>
</CustomField>