fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Size_of_MANTA_Device_Used__c.field-meta.xml
<CustomField>
    <fullName>Size_of_MANTA_Device_Used__c</fullName>
    <label>Size of MANTA Device Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>