fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Time_of_MANTA_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Time_of_MANTA_Deployment__c</fullName>
    <label>Time of MANTA Deployment</label>
    <length>55</length>
    <type>Text</type>
</CustomField>