fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Time_Protamine_was_Given__c.field-meta.xml
<CustomField>
    <fullName>Time_Protamine_was_Given__c</fullName>
    <label>Time Protamine was Given</label>
    <length>55</length>
    <type>Text</type>
</CustomField>