fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Tortuosity__c.field-meta.xml
<CustomField>
    <fullName>Tortuosity__c</fullName>
    <label>Tortuosity</label>
    <length>15</length>
    <type>Text</type>
</CustomField>