fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Tortuosity_Comments__c.field-meta.xml
<CustomField>
    <fullName>Tortuosity_Comments__c</fullName>
    <label>Tortuosity Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>