fullSandbox11072023/force-app/main/default/objects/MANTA_Case_Data__c/fields/Ultrasound_Guided_Access_Used__c.field-meta.xml
<CustomField>
    <fullName>Ultrasound_Guided_Access_Used__c</fullName>
    <label>Ultrasound Guided Access Used</label>
    <length>15</length>
    <type>Text</type>
</CustomField>